# design-patterns

./: CMakeLists.txt  README.md
Observer/: CMakeLists.txt  IObserver.h  SomeObserverImpl.cpp  SomeObserverImpl.h  SomeSubjectImpl.cpp  SomeSubjectImpl.h  Subject.cpp  Subject.h  main.cpp
Singleton/: CMakeLists.txt  NaiveSingleton.h  SMSingleton.h  main.cpp
